# voice-changer

./: .gitignore  CMakeLists.txt  README.md  config.ini  male_voice_fix.txt  rmvpe.py  rmvpe_lib.py  server.py  start_server.sh  tf_is_this_thing.md  tf_is_this_thing.txt  tmp.py  tmphubert.py  todo.txt  vcpkg.json
models/: README.md
pth-2-onnx-Bullshite/: HubertContentVec.py  SynthesizerTrn.py  export_onnx.py  export_rvc_full_onnx.py  modules.py
src/: AudioIO.cpp  AudioIO.h  Denoise.h  PythonBridge.cpp  PythonBridge.h  RVCEngine.cpp  RVCEngine.h  Utils.h  main.cpp
src/server/: server.py
