cmake_minimum_required(VERSION 3.20)
project(voice-changer)
set(CMAKE_CXX_STANDARD 17)
find_path(MINIAUDIO_INCLUDE_DIRS "miniaudio.h" REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(RNNOISE REQUIRED rnnoise)
add_executable(voice_changer_app src/main.cpp src/PythonBridge.cpp src/PythonBridge.h src/Denoise.h src/Utils.h)
target_include_directories(voice_changer_app PRIVATE ${MINIAUDIO_INCLUDE_DIRS} ${RNNOISE_INCLUDE_DIRS} src)
target_link_libraries(voice_changer_app PRIVATE ${RNNOISE_LIBRARIES})